--- a/Sediin.Core.WebUi/Views/Authentication/ResetPassword.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/ResetPassword.cshtml
@@ -1,77 +1,50 @@
 ﻿@model Sediin.Core.WebUi.Models.ResetPasswordViewModel
 
-<div class="row border border-1" style="min-height:460px;">
-
-    <div class="col-md-6" style="margin:auto; text-align:center;">
-        <img src="~/images/logo.png" />
-    </div>
-
-    <div class="col-md-6  p-3">
-        <div class="mt-3">
-            <h4 class="card-title"><i class="fa fa-passport mr-2"></i>Reimposta la password dell'area riservata</h4>
-            <hr />
-           <ajax-form asp-action="ResetPassword" asp-controller="Authentication"
-           on-begin="alertWaid()"
-           on-success="onSuccessResetPassword(data)"
-           on-failure="handleError">
-
-                @Html.HiddenFor(model => model.Code)
-
-                <div class="form-horizontal mt-4">
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label" })
-                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Username" })
-                            @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
-
-                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "Password" } })
-
-                            @Html.ValidationMessageFor(model => model.Password, "")
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label" })
-
-                            @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "Conferma Password" } })
-
-                            @Html.ValidationMessageFor(model => model.ConfirmPassword, "")
-                        </div>
-                    </div>
-
-                    <hr />
-
-                    <div class="form-group mt-4">
-                        <div class="col-md-12 text-left">
-                            <button type="submit" class="btn btn-info form-control">Reimposta password</button>
-                        </div>
-                    </div>
-
-                    <hr />
-
-                    <div class="form-group row mt-4">
-                        <div class="col-md-8">
-
-                            <i class="fa fa-user-lock mr-1"></i>
-
-                            @Html.ActionLink("Ricordi la tua Password? Esegui login", "Login", "Authentication", new { @class = "link-black" })
-
-
-                        </div>
-                    </div>
-
-
-                </div>
-
-            </ajax-form>
+<div class="reset-container">
+    <div class="reset-box">
+        <div class="text-center mb-4">
+            <img src="~/images/logo.png" alt="Logo" style="max-width: 180px;" />
         </div>
+
+        <h4 class="card-title text-center mb-3">
+            <i class="fa fa-passport me-2"></i> Reimposta la password
+        </h4>
+
+        <ajax-form asp-action="ResetPassword"
+                   asp-controller="Authentication"
+                   on-begin="alertWaid()"
+                   on-success="onSuccessResetPassword(data)"
+                   on-failure="handleError">
+
+            @Html.HiddenFor(model => model.Code)
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label" })
+                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Username" })
+                @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
+            </div>
+
+            <div class="form-group mt-3">
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Nuova password" } })
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+            </div>
+
+            <div class="form-group mt-3">
+                @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", placeholder = "Conferma password" } })
+                @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
+            </div>
+
+            <div class="text-end mt-4">
+                <button type="submit" class="btn btn-info btn-sm">Reimposta password</button>
+            </div>
+
+            <div class="text-center mt-4">
+                <i class="fa fa-user-lock me-1"></i>
+                @Html.ActionLink("Ricordi la tua password? Esegui login", "Login", "Authentication", null, new { @class = "link-secondary text-decoration-underline" })
+            </div>
+        </ajax-form>
     </div>
 </div>
 
@@ -83,6 +56,4 @@
             location.href = "/Authentication/Login";
         }, 2000)
     }
-
 </script>
-
