--- a/Sediin.Core.WebUi/Views/Authentication/ResetPassword.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/ResetPassword.cshtml
@@ -42,7 +42,7 @@
 
             <div class="text-center mt-4">
                 <i class="fa fa-user-lock me-1"></i>
-                @Html.ActionLink("Ricordi la tua password? Esegui login", "Login", "Authentication", null, new { @class = "link-secondary text-decoration-underline" })
+                @Html.ActionLink("Ricordi la tua password? Esegui login", "Login", "Authentication", null, new { @class = "" })
             </div>
         </ajax-form>
     </div>
