--- a/Sediin.Core.WebUi/wwwroot/css/backend.css
+++ b/Sediin.Core.WebUi/wwwroot/css/backend.css
@@ -1,4 +1,181 @@
-﻿/*--------------------------------------------------------*/
+﻿
+.email-confirmation-container {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f7f9fc;
+    padding: 2rem;
+}
+
+.email-confirmation-box {
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    padding: 2.5rem;
+    max-width: 500px;
+    width: 100%;
+}
+
+    .email-confirmation-box h2 {
+        font-weight: 600;
+    }
+
+    .email-confirmation-box .alert {
+        border-radius: 12px;
+        font-size: 1rem;
+        padding: 1.25rem 1.5rem;
+    }
+
+
+.login-container {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f7f9fc;
+}
+
+.login-box {
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    padding: 2rem 2.5rem;
+    width: 100%;
+    max-width: 500px;
+}
+
+    .login-box h4 {
+        font-weight: 600;
+        color: #333;
+    }
+
+    .login-box .form-control {
+        border-radius: 8px;
+        padding: 0.75rem 1rem;
+    }
+
+    .login-box .btn {
+        border-radius: 8px;
+        padding: 0.75rem;
+    }
+
+
+.reset-container {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f7f9fc;
+    padding: 2rem;
+}
+
+.reset-box {
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    padding: 2.5rem;
+    max-width: 500px;
+    width: 100%;
+}
+
+    .reset-box h4 {
+        font-weight: 600;
+        color: #333;
+    }
+
+    .reset-box .form-control {
+        border-radius: 8px;
+        padding: 0.75rem 1rem;
+    }
+
+    .reset-box .btn {
+        border-radius: 8px;
+        padding: 0.6rem 1.2rem;
+    }
+
+
+
+
+.tab-content {
+    line-height: 25px;
+    border-top: 5px solid;
+    padding: 30px 25px;
+}
+
+.tab-content {
+    background: #fdfdfd;
+    border: 1px solid #ddd;
+    border-top-color: #082c45;
+}
+
+
+.btn-blue {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #082c45;
+    --bs-btn-border-color: #0a4d7c;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #0a4d7c;
+    --bs-btn-hover-border-color: #082c45;
+    --bs-btn-focus-shadow-rgb: 49, 132, 253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #082c45;
+    --bs-btn-active-border-color: #0a4d7c;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #082c45;
+    --bs-btn-disabled-border-color: #0a4d7c;
+}
+
+.btn-verde {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #084b26;
+    --bs-btn-border-color: #15713e;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #15713e;
+    --bs-btn-hover-border-color: #084b26;
+    --bs-btn-focus-shadow-rgb: 49, 132, 253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #084b26;
+    --bs-btn-active-border-color: #15713e;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #084b26;
+    --bs-btn-disabled-border-color: #15713e;
+}
+
+.table-verde {
+    --bs-table-color: #fff;
+    --bs-table-bg: #084b26;
+    --bs-table-border-color: #a6b5cc;
+    --bs-table-striped-bg: #c5d7f2;
+    --bs-table-striped-color: #000;
+    --bs-table-active-bg: #bacbe6;
+    --bs-table-active-color: #000;
+    --bs-table-hover-bg: #bfd1ec;
+    --bs-table-hover-color: #000;
+    color: var(--bs-table-color);
+    border-color: var(--bs-table-border-color);
+}
+
+a.link-black {
+    color: black;
+    text-decoration: underline;
+}
+
+    a.link-black:hover {
+        color: #565857;
+        text-decoration: none;
+    }
+
+
+.bg-light-gray {
+    --bs-bg-opacity: 1;
+    background-color: #fbfbfb !important;
+}
+
+
+/*--------------------------------------------------------*/
 
 .control-label {
     font-weight: bold;
@@ -154,106 +331,6 @@ footer {
     --bs-dropdown-header-color: #adb5bd;
 }
 
-/* ---------------------------------------------------
-
------------------------------------------------------ */
-.badge {
-    --bs-badge-padding-x: 0.65em;
-    --bs-badge-padding-y: 0.35em;
-    --bs-badge-font-size: 0.75em;
-    --bs-badge-font-weight: 700;
-    --bs-badge-color: #fff;
-    --bs-badge-border-radius: 0.375rem;
-    display: inline-block;
-    padding: var(--bs-badge-padding-y) var(--bs-badge-padding-x);
-    font-size: var(--bs-badge-font-size);
-    font-weight: var(--bs-badge-font-weight);
-    line-height: 1;
-    color: var(--bs-badge-color);
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: baseline;
-    border-radius: var(--bs-badge-border-radius);
-}
-
-    .badge:empty {
-        display: none;
-    }
-
-.btn .badge {
-    position: relative;
-    top: -1px;
-}
-
-
-a,
-a:hover,
-a:focus {
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
-}
-
-.line {
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
-}
-
-
-
-.wrapper {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
-}
-
-
-#sidebar ul li.active > a,
-a[aria-expanded="true"] {
-}
-
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-}
-
-a.download {
-    background: #fff;
-    color: #7386D5;
-}
-
-a.article,
-a.article:hover {
-    background: #6d7fcc !important;
-}
-
-.loadingInput {
-    background-image: url('loading_images/loading.gif');
-    background-color: #ffffff;
-    background-size: 25px 25px;
-    background-position: right center;
-    background-repeat: no-repeat;
-}
-/* ---------------------------------------------------
-    CONTENT STYLE
------------------------------------------------------ */
-
-#content {
-    width: 100%;
-    padding: 20px;
-    padding-left: 0px;
-    padding-right: 0px;
-    min-height: 100vh;
-    transition: all 0.3s;
-    overflow: hidden;
-}
-
 .areaRiservataInfoBox {
     border-radius: 15px;
 }
@@ -264,35 +341,6 @@ a.article:hover {
     padding-top: 10px;
 }
 
-
-.row.equal-cols {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-}
-
-    .row.equal-cols:before,
-    .row.equal-cols:after {
-        display: block;
-    }
-
-    .row.equal-cols > [class*='col-'] {
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-    }
-
-        .row.equal-cols > [class*='col-'] > * {
-            -webkit-flex: 1 1 auto;
-            -ms-flex: 1 1 auto;
-            flex: 1 1 auto;
-        }
 
 /* ---------------------------------------------------
     MEDIAQUERIES
