--- a/Sediin.Core.WebUi/wwwroot/css/backend.css
+++ b/Sediin.Core.WebUi/wwwroot/css/backend.css
@@ -1,411 +1,225 @@
 ﻿
-.email-confirmation-container {
-    min-height: 100vh;
+body {
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #f7f9fc;
-    padding: 2rem;
+    flex-direction: column;
+    min-height: 100dvh;
 }
 
-.email-confirmation-box {
-    background: #fff;
-    border-radius: 16px;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-    padding: 2.5rem;
-    max-width: 500px;
-    width: 100%;
+main {
+    flex: 1;
 }
-
-    .email-confirmation-box h2 {
-        font-weight: 600;
-    }
-
-    .email-confirmation-box .alert {
-        border-radius: 12px;
-        font-size: 1rem;
-        padding: 1.25rem 1.5rem;
-    }
-
-
-.login-container {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #f7f9fc;
-}
-
-.login-box {
-    background: #fff;
-    border-radius: 16px;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-    padding: 2rem 2.5rem;
-    width: 100%;
-    max-width: 500px;
-}
-
-    .login-box h4 {
-        font-weight: 600;
-        color: #333;
-    }
-
-    .login-box .form-control {
-        border-radius: 8px;
-        padding: 0.75rem 1rem;
-    }
-
-    .login-box .btn {
-        border-radius: 8px;
-        padding: 0.75rem;
-    }
-
-
-.reset-container {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #f7f9fc;
-    padding: 2rem;
-}
-
-.reset-box {
-    background: #fff;
-    border-radius: 16px;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-    padding: 2.5rem;
-    max-width: 500px;
-    width: 100%;
-}
-
-    .reset-box h4 {
-        font-weight: 600;
-        color: #333;
-    }
-
-    .reset-box .form-control {
-        border-radius: 8px;
-        padding: 0.75rem 1rem;
-    }
-
-    .reset-box .btn {
-        border-radius: 8px;
-        padding: 0.6rem 1.2rem;
-    }
-
-
-
-
-.tab-content {
-    line-height: 25px;
-    border-top: 5px solid;
-    padding: 30px 25px;
-}
-
-.tab-content {
-    background: #fdfdfd;
-    border: 1px solid #ddd;
-    border-top-color: #082c45;
-}
-
-
-.btn-blue {
-    --bs-btn-color: #fff;
-    --bs-btn-bg: #082c45;
-    --bs-btn-border-color: #0a4d7c;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #0a4d7c;
-    --bs-btn-hover-border-color: #082c45;
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #082c45;
-    --bs-btn-active-border-color: #0a4d7c;
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #082c45;
-    --bs-btn-disabled-border-color: #0a4d7c;
-}
-
-.btn-verde {
-    --bs-btn-color: #fff;
-    --bs-btn-bg: #084b26;
-    --bs-btn-border-color: #15713e;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #15713e;
-    --bs-btn-hover-border-color: #084b26;
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #084b26;
-    --bs-btn-active-border-color: #15713e;
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #084b26;
-    --bs-btn-disabled-border-color: #15713e;
-}
-
-.table-verde {
-    --bs-table-color: #fff;
-    --bs-table-bg: #084b26;
-    --bs-table-border-color: #a6b5cc;
-    --bs-table-striped-bg: #c5d7f2;
-    --bs-table-striped-color: #000;
-    --bs-table-active-bg: #bacbe6;
-    --bs-table-active-color: #000;
-    --bs-table-hover-bg: #bfd1ec;
-    --bs-table-hover-color: #000;
-    color: var(--bs-table-color);
-    border-color: var(--bs-table-border-color);
-}
-
-a.link-black {
-    color: black;
-    text-decoration: underline;
-}
-
-    a.link-black:hover {
-        color: #565857;
-        text-decoration: none;
-    }
-
-
-.bg-light-gray {
-    --bs-bg-opacity: 1;
-    background-color: #fbfbfb !important;
-}
-
-
-/*--------------------------------------------------------*/
-
-.control-label {
-    font-weight: bold;
-    margin-bottom:5px;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    color: white;
-    background-color: #245397;
-}
-
-.nav-pills .nav-link {
-    color: #082c45;
-    border-top: 1px solid #adb5bd;
-    border-left: 1px solid #adb5bd;
-    border-right: 1px solid #adb5bd;
-}
-
-/*--------------------------------------------------------*/
-
-
-
-.nav-link {
-    color: white;
-}
-
-    .nav-link:hover {
-        color: #245397;
-    }
-
-    .nav-link:active {
-        color: white !important;
-    }
-
-    .nav-link:focus {
-        color: white;
-    }
 
 footer {
-    background-color: #245397;
-    color: white;
-    border-top: 1px solid #fba341;
+    padding: 15px;
+    font-size: 14px;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
 }
 
-.navbar-custom {
-    background-color: #245397 !important;
-    border-bottom: 1px solid #fba341;
-}
-
-.navbar {
-    padding: 15px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-btn {
-    box-shadow: none;
-    outline: none !important;
-    border: none;
-}
-
-
-.sidebarli {
-    border-bottom: 1px solid #efefef;
-}
-
-#sidebar {
-    min-width: 250px;
-    max-width: 250px;
-    transition: all 0.3s;
-    border-right: 1px solid #393e42;
-}
-
-    #sidebar .sidebar-header {
-        padding: 20px;
-        padding-bottom: 10px;
-        padding-top: 5px;
-        border-bottom: 1px solid #393e42;
-    }
-
-    #sidebar.active {
-        margin-left: -250px;
-    }
-
-    #sidebar ul.components {
-        margin-top: 10px;
-    }
-
-    #sidebar ul p {
-        padding: 10px;
-    }
-
-    #sidebar ul li a {
-        padding-left: 3px;
-        padding-right: 15px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        /*padding: 10px;*/
-        /*font-size: 1.1em;*/
-        display: block;
-        border-top: 1px solid #FAFAFA;
-        border-bottom: 1px solid #FAFAFA;
-    }
-
-        #sidebar ul li a:hover {
-            background: #eee;
-            border-top: 1px solid #cacaca;
-            border-bottom: 1px solid #cacaca;
-        }
-
-
-.dropdown-menu-gray {
-    --bs-dropdown-color: #98999a;
-    --bs-dropdown-bg: #98999a;
-    --bs-dropdown-border-color: var( --bs-border-color-translucent);
-    --bs-dropdown-link-color: black;
-    --bs-dropdown-link-hover-color: black;
-    --bs-dropdown-divider-bg: var( --bs-border-color-translucent);
-    --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
-    --bs-dropdown-link-active-color: #fff;
-    --bs-dropdown-link-active-bg: #e6ecf5;
-    --bs-dropdown-link-disabled-color: #adb5bd;
-    --bs-dropdown-header-color: #adb5bd;
-}
-
-.dropdown-menu-blue {
-    --bs-dropdown-color: #dee2e6;
-    --bs-dropdown-bg: #082c45;
-    --bs-dropdown-border-color: var( --bs-border-color-translucent);
-    --bs-dropdown-link-color: #dee2e6;
-    --bs-dropdown-link-hover-color: #fff;
-    --bs-dropdown-divider-bg: var( --bs-border-color-translucent);
-    --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
-    --bs-dropdown-link-active-color: #fff;
-    --bs-dropdown-link-active-bg: #0d6efd;
-    --bs-dropdown-link-disabled-color: #adb5bd;
-    --bs-dropdown-header-color: #adb5bd;
-}
-
-.dropdown-menu-verde {
-    --bs-dropdown-color: #dee2e6;
-    --bs-dropdown-bg: #084b26;
-    --bs-dropdown-border-color: var( --bs-border-color-translucent);
-    --bs-dropdown-link-color: #dee2e6;
-    --bs-dropdown-link-hover-color: #fff;
-    --bs-dropdown-divider-bg: var( --bs-border-color-translucent);
-    --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
-    --bs-dropdown-link-active-color: #fff;
-    --bs-dropdown-link-active-bg: #0d6efd;
-    --bs-dropdown-link-disabled-color: #adb5bd;
-    --bs-dropdown-header-color: #adb5bd;
-}
-
-.areaRiservataInfoBox {
-    border-radius: 15px;
-}
-
-.areaRiservataInfoTitle {
-    font-family: LatoMedium;
-    font-size: 20px;
-    padding-top: 10px;
-}
-
-
-/* ---------------------------------------------------
-    MEDIAQUERIES
------------------------------------------------------ */
-
-@media (max-width: 768px) {
-    #sidebar {
-        margin-left: -250px;
-    }
-
-        #sidebar.active {
-            margin-left: 0;
-        }
-
-    #sidebarCollapse span {
-        display: none;
-    }
-}
 
 .doubleunderline {
     text-decoration-line: underline;
     text-decoration-style: double;
 }
 
-.blink {
-    animation: blink-animation 1s steps(5, start) infinite;
-    -webkit-animation: blink-animation 1s steps(5, start) infinite;
+.form-control {
+    width: 100%;
+    min-width: 100%;
 }
 
-@keyframes blink-animation {
-    to {
-        visibility: hidden;
+.form-control {
+    width: 100% !important;
+}
+
+.form-group {
+    margin-bottom: 15px
+}
+
+.content {
+    width: 100%;
+    padding-bottom: 40px;
+    display: table
+}
+
+.dl-horizontal dt {
+    white-space: normal;
+}
+
+
+.disabled {
+    pointer-events: none;
+    color: #AAA;
+    background: #F5F5F5;
+    cursor: not-allowed;
+}
+
+.fa-1_5x {
+    font-size: 1.5em;
+}
+
+.faicon {
+    padding-right: 5px;
+    text-decoration: none;
+}
+
+.blockquote {
+    font-size: 1em;
+}
+
+[type=reset], [type=submit], button, html [type=button] {
+    cursor: pointer;
+}
+
+.marginMenuIcon {
+    margin-right: 10px;
+}
+
+.wrapText {
+    word-wrap: break-word;
+}
+
+
+
+/* ---------------------------------------------------
+
+----------------------------------------------------- */
+.badge {
+    --bs-badge-padding-x: 0.65em;
+    --bs-badge-padding-y: 0.35em;
+    --bs-badge-font-size: 0.75em;
+    --bs-badge-font-weight: 700;
+    --bs-badge-color: #fff;
+    --bs-badge-border-radius: 0.375rem;
+    display: inline-block;
+    padding: var(--bs-badge-padding-y) var(--bs-badge-padding-x);
+    font-size: var(--bs-badge-font-size);
+    font-weight: var(--bs-badge-font-weight);
+    line-height: 1;
+    color: var(--bs-badge-color);
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: var(--bs-badge-border-radius);
+}
+
+    .badge:empty {
+        display: none;
     }
+
+.btn .badge {
+    position: relative;
+    top: -1px;
 }
 
-@-webkit-keyframes blink-animation {
-    to {
-        visibility: hidden;
+
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+}
+
+
+#sidebar ul li.active > a,
+a[aria-expanded="true"] {
+}
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+}
+
+a.download {
+    background: #fff;
+    color: #7386D5;
+}
+
+a.article,
+a.article:hover {
+    background: #6d7fcc !important;
+}
+
+.loadingInput {
+    background-image: url('loading_images/loading.gif');
+    background-color: #ffffff;
+    background-size: 25px 25px;
+    background-position: right center;
+    background-repeat: no-repeat;
+}
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+
+#content {
+    width: 100%;
+    padding: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
+    min-height: 100vh;
+    transition: all 0.3s;
+    overflow: hidden;
+}
+
+
+.row.equal-cols {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+    .row.equal-cols:before,
+    .row.equal-cols:after {
+        display: block;
     }
-}
 
-.blurFilter_2px {
-    backdrop-filter: blur(2px);
-    filter: blur(2px);
-}
+    .row.equal-cols > [class*='col-'] {
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
 
-.pdfobject-container {
-    width: 800px;
-    height: 300px;
-    margin: auto;
-}
+        .row.equal-cols > [class*='col-'] > * {
+            -webkit-flex: 1 1 auto;
+            -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+        }
 
-.pdfobject {
-    border: solid 1px #666;
-}
 
-.fixed-table-header thead,
-.fixed-table-footer tfoot {
-    position: sticky;
-}
 
-.fixed-table-header thead {
-    inset-block-start: 0; /* "top" */
-}
 
-.fixed-table-footer tfoot {
-    inset-block-end: 0; /* "bottom" */
-}
+
+
+
+
+
+
+
