--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
@@ -11,8 +11,8 @@ else
         <table class="table table-striped table-bordered table-hover">
             <thead>
                 <tr class="text-center table-info">
-                    <th>Descrizione</th>
-                    <th>Codice Comune</th>
+                    <th>Nome</th>
+                    <th>Cognome</th>
                     <th>Email</th>
 
                 </tr>
@@ -35,6 +35,7 @@ else
                  total-rows="@Model.TotalRecords"
                  action="@Url.Action("Ricerca", "Utenti")"
                  action-export="@Url.Action("RicercaExcel", "Utenti")"
+                 query-model="@Model.Filtri"
                  update-target-id="resultRicerca"
                  http-method="Post">
     </paging-ajax>
