--- a/Sediin.Core.WebUi/Areas/Backend/Views/Home/Index.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Home/Index.cshtml
@@ -1,4 +1,1 @@
-﻿@using Sediin.Core.WebUi.Areas.Administrator.Models;
-
-<h1>HOME INDEX</h1>
-
+﻿@await Component.InvokeAsync("Menu", new { tipo = "homemenu" })
