--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
@@ -14,7 +14,7 @@ else
                     <th>Nome</th>
                     <th>Cognome</th>
                     <th>Email</th>
-
+                    <th style="width:200px"></th>
                 </tr>
             </thead>
             <tbody>
@@ -24,6 +24,15 @@ else
                         <td>@item.Nome</td>
                         <td>@item.Cognome</td>
                         <td>@item.Email</td>
+                        <td>
+                            <a class="btn btn-primary btn-sm w-100" data-ajax="true"
+                               data-ajax-begin="alertWaid()"
+                               data-ajax-failure="handleError"
+                               data-ajax-success="showModal_NoFooter('Modifica utente', data); alertClose()"
+                               href="@Url.Action("ModificaUtente", "Utenti", new { item.Id })">
+                                Modifica utente
+                            </a>
+                        </td>
                     </tr>
                 }
             </tbody>
