--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
@@ -37,7 +37,7 @@ else
                                         <a class="dropdown-item" data-ajax="true"
                                            data-ajax-begin="alertWaid()"
                                            data-ajax-failure="handleError"
-                                           data-ajax-success="showModalFullScreen('Modifica utente', data); alertClose()"
+                                           data-ajax-success="showModal('Modifica utente', data); alertClose()"
                                            href="@Url.Action("ModificaUtente", "Utenti", new { item.Id })">
                                             Modifica utente
                                         </a>
