--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ModificaUtente.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ModificaUtente.cshtml
@@ -11,7 +11,7 @@
     <div class="form-horizontal row mt-4">
         <div class="col-md-6">
             <div class="form-group">
-                @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Username)
                 <div>@Model.Username</div>
 
             </div>
@@ -22,9 +22,9 @@
 
         <div class="col-md-6 ">
             <div class="form-group">
-                @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Nome)
 
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "Nome" } })
+                @Html.TextBoxFor(model => model.Nome)
 
                 @Html.ValidationMessageFor(model => model.Nome, "")
             </div>
@@ -32,9 +32,9 @@
 
         <div class="col-md-6">
             <div class="form-group">
-                @Html.LabelFor(model => model.Cognome, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Cognome)
 
-                @Html.EditorFor(model => model.Cognome, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "Cognome" } })
+                @Html.TextBoxFor(model => model.Cognome)
 
                 @Html.ValidationMessageFor(model => model.Cognome, "")
             </div>
@@ -42,9 +42,9 @@
         <div class="col-md-6">
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Email)
 
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "Email" } })
+                @Html.TextBoxFor(model => model.Email)
 
                 @Html.ValidationMessageFor(model => model.Email, "")
             </div>
@@ -52,9 +52,9 @@
         <div class="col-md-6">
 
             <div class="form-group">
-                @Html.LabelFor(model => model.ConfirmEmail, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.ConfirmEmail)
 
-                @Html.EditorFor(model => model.ConfirmEmail, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "Conferma Email" } })
+                @Html.TextBoxFor(model => model.ConfirmEmail)
 
                 @Html.ValidationMessageFor(model => model.ConfirmEmail, "")
             </div>
